type User @entity {
  id: ID!
  batchesOwned: [BatchToken!]! @derivedFrom(field: "owner")
  batchesCreated: [BatchToken!]! @derivedFrom(field: "creator")
  projectsOwned: [Project!]! @derivedFrom(field: "owner")
  projectsCreated: [Project!]! @derivedFrom(field: "creator")
  vintagesOwned: [ProjectVintage!]! @derivedFrom(field: "owner")
  vintagesCreated: [ProjectVintage!]! @derivedFrom(field: "creator")
  retirementsCreated: [Retirement!]! @derivedFrom(field: "creator")
  redeemsCreated: [Redeem!]! @derivedFrom(field: "creator")
  tokensOwned: [KCO2Balance!]! @derivedFrom(field: "user")
  poolBalances: [UserPoolBalance!]! @derivedFrom(field: "user")
}

type Project @entity {
  id: ID!
  creator: User!
  owner: User!
  timestamp: BigInt!
  tx: String
  projectId: String!
  vintages: [ProjectVintage!]! @derivedFrom(field: "project")
  standard: String!
  methodology: String!
  region: String!
  storageMethod: String!
  method: String!
  emissionType: String!
  category: String!
  uri: String!
}

type ProjectVintage @entity {
  id: ID!
  creator: User!
  owner: User!
  timestamp: BigInt!
  tx: String!
  name: String!
  startTime: BigInt!
  endTime: BigInt!
  project: Project
  batches: [BatchToken!]! @derivedFrom(field: "vintage")
  totalVintageQuantity: BigInt!
  isCorsiaCompliant: Boolean!
  isCCCompliant: Boolean!
  coBenefits: String!
  corresAdjustment: String!
  additionalCertification: String!
  kco2Token: KCO2Token
}

type BatchToken @entity {
  id: ID!
  creator: User!
  owner: User!
  timestamp: BigInt!
  vintage: ProjectVintage!
  status: String!
  tx: String!
}

type KCO2Token @entity {
  id: ID! # address
  creator: User!
  createdAt: BigInt!
  creationTx: String!
  projectVintage: ProjectVintage!
  name: String!
  symbol: String!
  retirements: [Retirement!]! @derivedFrom(field: "token")
  #   address: String!
}

type KCO2Balance @entity {
  id: ID!
  user: User!
  token: KCO2Token!
  balance: BigInt!
}

type RetirementCertificate @entity {
  id: ID!
  creationTx: String!
  updateTxs: [String!]!
  createdAt: BigInt!
  retiringEntity: User!
  beneficiary: User!
  retiringEntityString: String!
  beneficiaryString: String!
  retirementMessage: String!
  retirements: [Retirement!]! @derivedFrom(field: "certificate")
}

type Retirement @entity {
  id: ID!
  creationTx: String!
  amount: BigInt!
  timestamp: BigInt!
  token: KCO2Token!
  creator: User!
  eventId: BigInt
  certificate: RetirementCertificate
}

type PooledKCO2Token @entity {
  id: ID!
  token: KCO2Token!
  poolAddress: Pool!
  amount: BigInt!
}

type Deposit @entity {
  id: ID!
  amount: BigInt!
  timestamp: BigInt!
  token: KCO2Token!
  pool: Pool!
  creator: User!
}

type Redeem @entity {
  id: ID!
  amount: BigInt!
  timestamp: BigInt!
  token: KCO2Token!
  pool: Pool!
  creator: User!
}

type UserPoolBalance @entity {
  id: ID!
  user: User!
  pool: Pool!
  balance: BigInt!
}

type Pool @entity {
  id: ID! # address
  name: String
  totalCarbonLocked: BigInt!
  #   filters: [String!]
  pooledTokens: [PooledKCO2Token!]! @derivedFrom(field: "poolAddress")
  poolBalances: [UserPoolBalance!]! @derivedFrom(field: "pool")
  deposits: [Deposit!]! @derivedFrom(field: "pool")
  redeems: [Redeem!]! @derivedFrom(field: "pool")
}
